--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,10 @@ author:
 language: en
 timezone: ''
 
-#部署位置
-deploy:
-  type: git
-  repository: git@github.com:/18072150332/Silk.github.io.git
-  branch: main
-
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://18072150332.github.io/Silk.github.io/
-permalink: :year/:month/:day/:title/
+url: https://zhangfu-blog-evxueyuw.edgeone.site/
+permalink: article/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -72,11 +66,6 @@ index_generator:
   per_page: 10
   order_by: -date
 
-# Category & Tag
-default_category: uncategorized
-category_map:
-tag_map:
-
 # Metadata elements
 ## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
 meta_generator: true
@@ -95,46 +84,10 @@ updated_option: 'mtime'
 per_page: 10
 pagination_dir: page
 
-# Include / Exclude file(s)
-## include:/exclude: options only apply to the 'source/' folder
-include:
-exclude:
-ignore:
-
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 plugins:
-  - hexo-renderer-markdown-it
   - hexo-server
 
 ## Themes: https://hexo.io/themes/
 theme: Silk
-
-## markdown
-markdown:
-  preset: 'default'
-  render:
-    html: true
-    xhtmlOut: false
-    langPrefix: 'language-'
-    breaks: true
-    linkify: true
-    typographer: true
-    quotes: '“”‘’'
-  enable_rules:
-  disable_rules:
-  plugins:
-  anchors:
-    level: 2
-    collisionSuffix: ''
-    permalink: false
-    permalinkClass: 'header-anchor'
-    permalinkSide: 'left'
-    permalinkSymbol: '¶'
-    case: 0
-    separator: '-'
-  images:
-    lazyload: false
-    prepend_root: false
-    post_asset: false
-  inline: false  # https://markdown-it.github.io/markdown-it/#MarkdownIt.renderInline
