feat: about社交通过配置文件渲染

--- a/themes/Silk/_config.yml
+++ b/themes/Silk/_config.yml
@@ -29,3 +29,16 @@ markdown:
 
 plugins:
   - hexo-renderer-markdown-it
+
+# Social links configuration
+social:
+  - name: github
+    url: '#'
+    icon: 'fa-github'
+  - name: envelope
+    url: '#'
+    icon: 'fa-envelope'
+  - name: weixin
+    url: '#'
+    icon: 'fa-weixin'
+    qrcode: '/images/wechat-qrcode.png'
