--- a/themes/Silk/_config.yml
+++ b/themes/Silk/_config.yml
@@ -27,6 +27,10 @@ markdown:
     post_asset: false
   inline: false  # https://markdown-it.github.io/markdown-it/#MarkdownIt.renderInline
 
+# 站点地图
+sitemap:
+  path: sitemap.xml
+
 plugins:
   - hexo-renderer-markdown-it 
 
