--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "hexo generate",
+    "build": "hexo generate --config _config.yml,_config.build.yml,valine_config.yml",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server --config _config.yml,_config.dev.yml,valine_config.yml"
