--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "version": "7.3.0"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
-    "@tailwindcss/typography": "^0.5.16",
-    "autoprefixer": "^10.4.21",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
@@ -26,12 +23,11 @@
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^1.0.0",
+    "highlight.js": "^11.11.1",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-container": "^4.0.0",
     "markdown-it-expandable": "^1.0.2",
-    "markdown-it-imsize": "^2.0.1",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.1"
+    "markdown-it-imsize": "^2.0.1"
   },
   "devDependencies": {
     "hexo": "^7.3.0"
