--- a/themes/Silk/_config.yml
+++ b/themes/Silk/_config.yml
@@ -27,10 +27,19 @@ markdown:
     post_asset: false
   inline: false  # https://markdown-it.github.io/markdown-it/#MarkdownIt.renderInline
 
+# 代码高亮
+highlight: 
+  enable: true
+  line_number: true
+  auto_detect: false
+prismjs:
+  enable: false
+
 # 站点地图
 sitemap:
   path: sitemap.xml
-
+  
+# 插件
 plugins:
   - hexo-renderer-markdown-it 
 
