--- a/themes/Silk/_config.yml
+++ b/themes/Silk/_config.yml
@@ -1,4 +1,4 @@
-## markdown
+# Markdown配置
 markdown:
   preset: 'default'
   render:
@@ -12,6 +12,7 @@ markdown:
   enable_rules:
   disable_rules:
   plugins:
+    - markdown-it-container
   anchors:
     level: 2
     collisionSuffix: ''
@@ -25,15 +26,7 @@ markdown:
     lazyload: false
     prepend_root: false
     post_asset: false
-  inline: false  # https://markdown-it.github.io/markdown-it/#MarkdownIt.renderInline
-
-# 代码高亮
-highlight: 
-  enable: true
-  line_number: true
-  auto_detect: false
-prismjs:
-  enable: false
+  inline: false
 
 # 站点地图
 sitemap:
